# erturk

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
erturk/: CMakeLists.txt
erturk/allocator/: AlignedSystemAllocator.hpp  CMakeLists.txt  SystemAllocator.hpp
erturk/atomic/: Atomic.hpp  CMakeLists.txt
erturk/bitwise/: BitArray.hpp  Bitmap.hpp  CMakeLists.txt  MultiDimensionalBitArray.hpp
erturk/communication/: CMakeLists.txt
erturk/concurrency/: CMakeLists.txt
erturk/concurrency/atomic/: Atomic.hpp  CMakeLists.txt
erturk/concurrency/memory_reclemation/: CMakeLists.txt  HazardPointers.hpp
erturk/container/: Array.hpp  CMakeLists.txt  DynamicArray.hpp  TypeBufferArray.hpp  TypeBufferDynamicArray.hpp
erturk/containers/: Array.hpp  CMakeLists.txt  DynamicTypeBufferArray.hpp  String.hpp  TypeBufferArray.hpp
erturk/containers/iterators/: CMakeLists.txt
erturk/containers/ranges/: CMakeLists.txt  InitializerList.hpp
erturk/memory/: Alignment.hpp  CMakeLists.txt  CString.hpp  Layout.hpp  Memory.hpp  StringLiteral.h  TypeBuffer.hpp  TypeBufferMemory.hpp
erturk/meta/: CMakeLists.txt  Computational.hpp  TypeTrait.hpp
erturk/meta_types/: CMakeLists.txt  Computational.hpp  Sequential.hpp  TypeTrait.hpp
erturk/ranges/: CMakeLists.txt
erturk/resource_management/: CMakeLists.txt  CowLifetimeCounter.hpp  CowManager.hpp  CowPtr.hpp  CowPtrManager.hpp
erturk/simd/: CMakeLists.txt  Simd.hpp
erturk/types_sequence/: CMakeLists.txt
erturk/vectorization/: CMakeLists.txt  Simd.hpp
samples/: CMakeLists.txt
samples/allocator/: main.cpp
samples/bitwise/: main.cpp
samples/concurrency/: atomics.cpp
samples/container/: container.cpp
samples/meta_types/: main  main.cpp
samples/resource_management/: main.cpp
samples/type_buffer/: main.cpp
samples/vectorization/: main.cpp
