cmake_minimum_required(VERSION 3.20)

add_subdirectory(allocator)
add_subdirectory(atomic)
add_subdirectory(container)
add_subdirectory(execution)
add_subdirectory(functional)
add_subdirectory(inplace)
add_subdirectory(iterator)
add_subdirectory(lock)
add_subdirectory(memory_reclemation)
add_subdirectory(meta)
add_subdirectory(net)
add_subdirectory(observable)
add_subdirectory(range)
add_subdirectory(shared_state)
add_subdirectory(simd)
add_subdirectory(sparse)
add_subdirectory(view)
