cmake_minimum_required(VERSION 3.20)

add_subdirectory(allocator)
add_subdirectory(bitwise)
add_subdirectory(communication)
add_subdirectory(concurrency)
add_subdirectory(containers)
add_subdirectory(file)
add_subdirectory(functional)
add_subdirectory(heterogeneous)
add_subdirectory(iterator)
add_subdirectory(memory)
add_subdirectory(linear_algebra)
add_subdirectory(meta_types)
add_subdirectory(resource_management)
add_subdirectory(timer)
add_subdirectory(types_sequence)
add_subdirectory(vectorization)
